lucas_kanade_hls/lucas_kanade_hls/hls/csim/report/lucas_kanade_hls_csim.log
INFO: [SIM 2] *************** CSIM start ***************
   Compiling ../../../../../LK_hls/src/lucas_kanade_pyramid.cpp in debug mode
In file included from ../../../../../LK_hls/src/lucas_kanade_pyramid.cpp:1:
In file included from ../../../../../LK_hls/src/lucas_kanade_pyramid.h:2:
In file included from ../../../../../LK_hls/src/lucas_kanade_hls.h:2:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\ap_fixed.h:9:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\etc/ap_common.h:668:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\etc/ap_private.h:68:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\hls_half.h:26:
In file included from C:/AMDDesignTools/2025.2/Vitis/include/etc/hls_half_fpo.h:19:
In file included from C:/AMDDesignTools/2025.2/Vitis/include\hls_fpo.h:140:
In file included from C:/AMDDesignTools/2025.2/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/AMDDesignTools/2025.2/Vitis/include\gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/AMDDesignTools/2025.2/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../../LK_hls/src/lucas_kanade_pyramid.cpp:21:21: error: comparison between pointer and integer ('void (*)(fixed_t (*)[64], fixed_t (*)[64], fixed_t (*)[64], fixed_t (*)[64])' (aka 'void (*)(ap_fixed<16, 4> (*)[64], ap_fixed<16, 4> (*)[64], ap_fixed<16, 4> (*)[64], ap_fixed<16, 4> (*)[64])') and 'int')
    lucas_kanade_hls<H/2, W/2>(I1_small, I2_small, u_small, v_small);
    ~~~~~~~~~~~~~~~~^~~~
../../../../../LK_hls/src/lucas_kanade_pyramid.cpp:27:21: error: comparison between pointer and integer ('void (*)(fixed_t (*)[64], fixed_t (*)[64], fixed_t (*)[64], fixed_t (*)[64])' (aka 'void (*)(ap_fixed<16, 4> (*)[64], ap_fixed<16, 4> (*)[64], ap_fixed<16, 4> (*)[64], ap_fixed<16, 4> (*)[64])') and 'int')
    lucas_kanade_hls<H, W>(I1, I2, u, v);
    ~~~~~~~~~~~~~~~~^~
../../../../../LK_hls/src/lucas_kanade_pyramid.cpp:21:30: error: comparison between pointer and integer ('int' and 'fixed_t (*)[32]' (aka 'ap_fixed<16, 4> (*)[32]'))
    lucas_kanade_hls<H/2, W/2>(I1_small, I2_small, u_small, v_small);
                          ~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../../../LK_hls/src/lucas_kanade_pyramid.cpp:31:15: note: in instantiation of function template specialization 'lucas_kanade_pyramid<64, 64>' requested here
template void lucas_kanade_pyramid<64,64>(fixed_t[64][64], fixed_t[64][64], fixed_t[64][64], fixed_t[64][64]);
              ^
../../../../../LK_hls/src/lucas_kanade_pyramid.cpp:27:26: error: comparison between pointer and integer ('int' and 'fixed_t (*)[64]' (aka 'ap_fixed<16, 4> (*)[64]'))
    lucas_kanade_hls<H, W>(I1, I2, u, v);
                        ~^~~~~~~~~~~~~~~
../../../../../LK_hls/src/lucas_kanade_pyramid.cpp:21:32: warning: left operand of comma operator has no effect [-Wunused-value]
    lucas_kanade_hls<H/2, W/2>(I1_small, I2_small, u_small, v_small);
                               ^~~~~~~~
../../../../../LK_hls/src/lucas_kanade_pyramid.cpp:21:42: warning: left operand of comma operator has no effect [-Wunused-value]
    lucas_kanade_hls<H/2, W/2>(I1_small, I2_small, u_small, v_small);
                                         ^~~~~~~~
../../../../../LK_hls/src/lucas_kanade_pyramid.cpp:21:52: warning: left operand of comma operator has no effect [-Wunused-value]
    lucas_kanade_hls<H/2, W/2>(I1_small, I2_small, u_small, v_small);
                                                   ^~~~~~~
../../../../../LK_hls/src/lucas_kanade_pyramid.cpp:27:28: warning: left operand of comma operator has no effect [-Wunused-value]
    lucas_kanade_hls<H, W>(I1, I2, u, v);
                           ^~
../../../../../LK_hls/src/lucas_kanade_pyramid.cpp:27:32: warning: left operand of comma operator has no effect [-Wunused-value]
    lucas_kanade_hls<H, W>(I1, I2, u, v);
                               ^~
../../../../../LK_hls/src/lucas_kanade_pyramid.cpp:27:36: warning: left operand of comma operator has no effect [-Wunused-value]
    lucas_kanade_hls<H, W>(I1, I2, u, v);
                                   ^
7 warnings and 4 errors generated.
mingw32-make: *** [csim.mk:103: obj/lucas_kanade_pyramid.o] Error 1
ERR: [SIM 100] CSim file generation failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
